# base-template

./: .coveragerc  .dockerignore  .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  .zenodo.json  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codecov.yml  coverage_writer.py  makefile  project_setup.py  pyproject.toml  tox.ini
.github/workflows/: auto-assign.yml  ci.yml  dist.yml  security.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
githooks/: pre-push
package_name/: __init__.py  util.py
package_name/app/: main.py
package_name/app/tests/: __init__.py  conftest.py  test_app.py
requirements/: all.txt  build.txt  dev.txt  docs.txt  prd.txt  test.txt
tests/: test_project_setup.py  test_util.py
